# dark-web-threat-intel-toolkit

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  cli.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
.streamlit/: config.toml  secrets.toml.example
ai_summarizer/: __init__.py  anthropic_backend.py  local_backend.py  openai_backend.py  summarizer.py
ai_summarizer/prompt_templates/: ioc_bulletin.yaml  (+2 more)
analysis/: __init__.py  anomaly_detector.py  report_generator.py  trend_analyzer.py  visualizer.py
classifier/: __init__.py  bert_classifier.py  keyword_classifier.py  mitre_mapper.py  ml_classifier.py  synthetic_data_generator.py
config/: __init__.py  mitre_attack_mapping.yaml  settings.yaml
dashboard/: __init__.py  app.py
data/: dashboard_demo.db
database/: schema.sql
export/: __init__.py  csv_exporter.py  misp_exporter.py  stix_exporter.py
notebooks/: demo_walkthrough.ipynb
pipeline/: __init__.py  cleaner.py  db_loader.py  enricher.py  entity_extractor.py
samples/: cli_full_pipeline_output.txt  iocs.csv  misp_event.json  ml_comparison_report.md  stix_bundle.json  threat_report.html  threat_report.md
scheduler/: __init__.py  scheduler.py
scraper/: __init__.py  base_scraper.py  feed_scraper.py  paste_scraper.py  selenium_scraper.py  simulated_market_scraper.py
scripts/: capture_screenshots.py
tests/: conftest.py  test_analysis.py  test_classifier.py  test_cli.py  test_dashboard.py  test_export.py  test_pipeline.py  test_scheduler.py  test_scraper.py  test_summarizer.py
(+12 files in other folders)
