[project]
name = "dark-web-threat-intel-toolkit"
version = "1.0.0"
description = "Threat intelligence toolkit for OSINT collection, classification, and analysis"
authors = [{name = "Sai Praneeth Koti", email = "praneeth01koti@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/praneethkoti/dark-web-threat-intel-toolkit"
